atribuindo a funcionalidade de listagem de despesas e receitas

--- a/app/src/main/res/layout/fragment_receitas.xml
+++ b/app/src/main/res/layout/fragment_receitas.xml
@@ -2,12 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.williamsilva.economizze.fragment.ReceitasFragment">
+    tools:context="br.com.williamsilva.economizze.fragment.DespesasFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_receitas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Teste1" />
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_add_white_36dp" />
 
 </FrameLayout>
