--- a/app/src/main/res/layout/fragment_despesas.xml
+++ b/app/src/main/res/layout/fragment_despesas.xml
@@ -5,10 +5,10 @@
     tools:context="br.com.williamsilva.economizze.fragment.DespesasFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_despesas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Teste3" />
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
