--- a/app/src/main/res/layout/activity_form_receita.xml
+++ b/app/src/main/res/layout/activity_form_receita.xml
@@ -1,12 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_apllication"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.williamsilva.economizze.activity.FormReceitaActivity">
+    tools:context=".activity.FormReceitaActivity">
 
-</RelativeLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/nome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nome da Receita"
+            android:textColor="@color/primary_text" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/valor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Valor"
+            android:inputType="numberDecimal"
+            android:textColor="@color/primary_text" />
+    </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Data de Recebimento"
+        android:textColor="@color/primary_text" />
+
+    <TextView
+        android:id="@+id/data_recebimento"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="10/02/2016"
+        android:textColor="@color/primary_text"
+        android:textSize="20dp" />
+
+    <CheckBox
+        android:id="@+id/cbx_receita_fixa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Receita Fixa"
+        android:textColor="@color/primary_text" />
+
+   </LinearLayout>
