--- a/app/src/main/res/layout/fragment_financas.xml
+++ b/app/src/main/res/layout/fragment_financas.xml
@@ -16,12 +16,14 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/voltar"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginRight="10dp"
                 android:drawableLeft="@drawable/chevron_left" />
 
             <TextView
+                android:id="@+id/mes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Fevereiro de 2016"
@@ -29,6 +31,7 @@
                 android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/avancar"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
@@ -53,7 +56,9 @@
             android:textSize="15dp"
             android:textColor="@color/primary_text"
             android:text="Total de Receitas"/>
+
         <TextView
+            android:id="@+id/total_receitas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/ln_mes"
@@ -61,6 +66,130 @@
             android:layout_marginTop="16dp"
             android:textSize="15dp"
             android:textColor="@color/primary_text"
-            android:text="10000,00"/>
+            android:text="0,00"/>
+
+        <View
+            android:id="@+id/view_total_despesas"
+            android:layout_below="@id/view_total_receitas"
+            android:layout_alignParentLeft="true"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_icon_despesa"
+            />
+        <TextView
+            android:layout_below="@id/view_total_receitas"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="Total de Despesas"/>
+
+        <TextView
+            android:id="@+id/total_despesas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_total_receitas"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="0,00"/>
+        <View
+            android:id="@+id/view_total_despesas_nao_paga"
+            android:layout_below="@id/view_total_despesas"
+            android:layout_alignParentLeft="true"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_icon_despesa_nao_paga"
+            />
+        <TextView
+            android:layout_below="@id/view_total_despesas"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="Despesas à Pagar"/>
+
+        <TextView
+            android:id="@+id/despesas_nao_paga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_total_despesas"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="0,00"/>
+        <View
+            android:id="@+id/view_total_despesas_paga"
+            android:layout_below="@id/view_total_despesas_nao_paga"
+            android:layout_alignParentLeft="true"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_icon_despesa_paga"
+            />
+        <TextView
+            android:layout_below="@id/view_total_despesas_nao_paga"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="Despesas Pagas"/>
+
+        <TextView
+            android:id="@+id/despesas_paga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_total_despesas_nao_paga"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="0,00"/>
+
+        <View
+            android:id="@+id/view_total_saldo_atual"
+            android:layout_below="@id/view_total_despesas_paga"
+            android:layout_alignParentLeft="true"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_icon_saldo_atual"
+            />
+        <TextView
+            android:layout_below="@id/view_total_despesas_paga"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="26dp"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="Saldo Atual"/>
+
+        <TextView
+            android:id="@+id/saldo_atual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_total_despesas_paga"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="16dp"
+            android:textSize="15dp"
+            android:textColor="@color/primary_text"
+            android:text="0,00"/>
+
+
     </RelativeLayout>
 </ScrollView>
