--- a/app/src/main/res/menu/button_add.xml
+++ b/app/src/main/res/menu/button_add.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/add"
-        android:title="Adicionar"
+        android:title="Salvar"
         android:orderInCategory="100"
         android:icon="@drawable/ic_send_white_36dp"
         app:showAsAction="ifRoom" />
