--- a/app/src/main/res/layout/activity_form_receita.xml
+++ b/app/src/main/res/layout/activity_form_receita.xml
@@ -32,6 +32,7 @@
             android:id="@+id/valor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:digits="0123456789,"
             android:hint="Valor"
             android:inputType="numberDecimal"
             android:textColor="@color/primary_text" />
@@ -60,4 +61,4 @@
         android:text="Receita Fixa"
         android:textColor="@color/primary_text" />
 
-   </LinearLayout>
+</LinearLayout>
